fix: Update menu apis
