# internal/swagger/swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "description": "A lightweight, flexible, elegant and full-featured RBAC scaffolding based on GIN + GORM 2.0 + Casbin + Wire DI.",
-        "title": "GIN-ADMIN",
+        "title": "Gin-Admin API",
         "contact": {},
         "version": "v10.0.0"
     },
@@ -917,6 +917,13 @@
                     "description": "Properties of menu (JSON)",
                     "type": "string"
                 },
+                "resources": {
+                    "description": "Resources of menu",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schema.MenuResource"
+                    }
+                },
                 "sequence": {
                     "description": "Sequence for sorting",
                     "type": "integer"
@@ -970,6 +977,13 @@
                     "description": "Properties of menu (JSON)",
                     "type": "string"
                 },
+                "resources": {
+                    "description": "Resources of menu",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schema.MenuResource"
+                    }
+                },
                 "sequence": {
                     "description": "Sequence for sorting",
                     "type": "integer"
@@ -990,6 +1004,31 @@
                         "menu",
                         "button"
                     ]
+                }
+            }
+        },
+        "schema.MenuResource": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "description": "Create time",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "Unique ID",
+                    "type": "string"
+                },
+                "menu_id": {
+                    "description": "From Menu.ID",
+                    "type": "string"
+                },
+                "method": {
+                    "description": "HTTP method",
+                    "type": "string"
+                },
+                "path": {
+                    "description": "API request path (e.g. /api/v1/users/:id)",
+                    "type": "string"
                 }
             }
         },
